force-app/main/default/objects/CallListMember__c/CallListMember__c.object-meta.xml
<CustomObject>
    <description>Used to determine a specific Lead for a specific Call List with specified Status and Order</description>
    <label>Call List Member</label>
    <nameField>
        <label>Call List Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>