force-app/main/default/objects/CallListMember__c/fields/CallList__c.field-meta.xml
<CustomField>
    <fullName>CallList__c</fullName>
    <description>The related Call List this member is for</description>
    <label>Call List</label>
    <referenceTo>CallList__c</referenceTo>
    <relationshipLabel>Call List Members</relationshipLabel>
    <relationshipName>Call_List_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>