force-app/main/default/objects/CallListMember__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead record to be called</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Call List Members</relationshipLabel>
    <relationshipName>Call_List_Members</relationshipName>
    <type>Lookup</type>
</CustomField>