force-app/main/default/objects/CallListMember__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>Lead__r.MobilePhone</formula>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>