force-app/main/default/objects/CallListMember__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Called</fullName>
                <default>true</default>
                <label>Not Called</label>
            </value>
            <value>
                <fullName>Called</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>